@@ -45,6 +45,7 @@ Date: 20/2/26
   Bugfixes:
     - Fixed coin trade "free proc" bug.
     - Fixed game crashing when attempting to clear the trade quality selector button's selection.
+    - Fixed that changing the claim cost settings wouldn't apply the changes to currently existing hexes that don't yet have hex cores.
   Modding:
     - Flagged mods as incompatible: Warp Drive Machine, Voidcraft, Simple Seablock.
 ---------------------------------------------------------------------------------------------------
